--- a/01_datamanagement.Rmd
+++ b/01_datamanagement.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Common practises in Data Management"
+output:
+  html_document:
+    toc: true
+    toc_depth: 4
+    toc_float: true
 ---
 
 ```{r setup, include = FALSE}
