--- a/02_datahandling.Rmd
+++ b/02_datahandling.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Introduction to data handling and visualisation in R"
+output:
+  html_document:
+    toc: true
+    toc_depth: 4
+    toc_float: true
 ---
 
 
